# patrickbouffardfanclub

./: .gitignore  README.md  preuve_fonctionnement.mkv
Audio/: blues00.csv  blues_test.csv  classic_test.csv  country_test.csv  country_test.scaled  disco_test.csv  hiphop_test.csv  jazz_test.csv  metal_test.csv  pop_test.csv  reggae_test.csv  rock_test.csv
CNN/: CMakeLists.txt
CNN/src/: main.cpp  model.py  model_v2.py
Comparaison/: CMakeLists.txt  comparaison  main.cpp  makefile
Comparaison/src/: decision_tree.h  main.cpp
Create_dataset/: CMakeLists.txt  create_dataset.bash  load_and_extract
Create_dataset/src/: constants.h  main.cpp
DecisionTree/: CMakeLists.txt  decision_tree.py  test.features
DecisionTree/src/: decision_tree.h  main.cpp
Lecture_et_extraction/: CMakeLists.txt  main.cpp
Lecture_et_extraction/src/: constants.h  fft_utils.cpp  fft_utils.h  main.cpp
Lecture_et_extraction/utils/: au_utils.cpp  au_utils.h
Python/: checkAuExtraction.py  checkDataset.py  checkFFTExtraction.py  fft_mean.csv  fft_sigma.csv  output  plot_svm.py  signal.csv
RandomForest/: random_forest.py
RandomForest/src/: main.cpp  random_forest  random_forest.h
SVM/: CMakeLists.txt  load_and_extract
SVM/data/: dataset_test.csv  labels.csv
SVM/src/: main.cpp
